<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Rhea-demo</string>
    <string name="action_settings">Settings</string>
    <string name="text_tts_source">宁波天坦智慧电子科技股份有限公司是一家专门致力于面向视障人士的无障碍信息系统研发与运维的科技公司，公司业务涵盖智能设备研发、智能软件系统设计以及软件平台运维等，2014年初成立于宁波高新区研发园，注册资本600万元。公司始终坚持“以技术创新实现产品价值”的理念，鼓励员工进行产品与技术创新，目前已经获得多项自主知识产权。天坦人时刻秉承“光明，责任，使命”的经营理念，立志为全球视力障碍人士提供全方位的互联网信息无障碍服务，公司愿景：以信息技术彻底改变视障人士的生活方式。</string>
    <string name="alarm_in_silent_mode">静音下响铃</string>
    <string name="alarm_in_silent_mode_open">静音下响铃。开启。点按可切换</string>
    <string name="alarm_in_silent_mode_close">静音下响铃。关闭。点按可切换</string>
    <string name="alarm_in_silent_time">响铃时间</string>
    <string name="alarm_in_silent_time_stop">10分钟后停止</string>
    <string name="alarm_snooze_duration">稍后再响间隔</string>
    <string name="alarm_snooze_duration_time">10分钟</string>
    <string name="alarm_key_setting">按键设置</string>
    <string name="alarm_key_setting_txt">设置闹钟铃声时音量、电源的作用</string>
    <string name="btn_confirm">确定。按钮</string>
    <string name="btn_nextstep">下一步。按钮</string>
    <string name="add_one_hour">增加一小时</string>
    <string name="minus_one_hour">减小一小时</string>
    <string name="add_five_hour">增加五小时</string>
    <string name="minus_five_hour">减小五小时</string>
    <string name="add_one_minute">增加一分钟</string>
    <string name="minus_one_minute">减小一分钟</string>
    <string name="add_ten_minute">增加十分钟</string>
    <string name="minus_ten_minute">减小十分钟</string>


    <string name="hello">Hello World, DeskClockMainActivity!</string>
    <!--<string name="app_name">闹钟</string>-->
    <!--<string name="action_settings">设置</string>-->
    <string name="label">"标签"</string>
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm" >"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"闹钟时间"</string>
    <string name="set_alarm">"设置闹钟"</string>
    <string name="alarm_remarks">"闹钟备注"</string>

    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除闹钟"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"稍后<xliff:g id="TIME">%s</xliff:g>再响"</string>
    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="text_begin">正在录音</string>
    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g> <xliff:g id="HOURS">%2$s</xliff:g> <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"只响一次"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>
    <string name="alarm_klaxon_service_desc">"在天坦闹钟中设置的闹钟铃声播放服务。"</string>
    <string name="close_alarm">"关闭闹钟"</string>
    <string name="open_alarm">"开启闹钟"</string>
    <string name="reset_alarm">"重设闹钟"</string>
    <string name="del_alarm">"删除闹钟"</string>
    <string name="repeat_title">"请选择重复规则"</string>
    <string name="custom_week">"自定义"</string>
</resources>
