<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/alarm_in_silent_mode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:focusable="true"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:text="@string/alarm_in_silent_mode"
            android:textColor="#fff"
            android:textSize="25sp" />
        <ImageView
            android:id="@+id/img_open"
            android:layout_width="@dimen/open_icon_width"
            android:layout_height="@dimen/open_icon_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:background="@mipmap/open_icon" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <RelativeLayout
        android:id="@+id/alarm_in_silent_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:text="@string/alarm_in_silent_time"
            android:textColor="#fff"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tv_alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="@string/alarm_in_silent_time_stop"
            android:textColor="#fff"
            android:textSize="25sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <RelativeLayout
        android:id="@+id/alarm_snooze_duration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_centerVertical="true"
            android:focusable="false"
            android:text="@string/alarm_snooze_duration"
            android:textColor="#fff"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tv_alarm_snooze_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="@string/alarm_snooze_duration_time"
            android:textColor="#fff"
            android:textSize="25sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/alarm_key_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:focusable="false"
            android:text="@string/alarm_key_setting"
            android:textColor="#fff"
            android:textSize="25sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:focusable="false"
            android:text="@string/alarm_key_setting_txt"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/empty_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
