<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/close_alarm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:gravity="center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/close_alarm"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/reset_alarm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:gravity="center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/reset_alarm"
        android:contentDescription="重设闹钟。按钮"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/del_alarm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_720x1280"
        android:gravity="center_vertical"
        android:paddingLeft="18dp"
        android:text="@string/del_alarm"
        android:contentDescription="删除闹钟。按钮"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />
</LinearLayout>