<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_custom_hour_set"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_720x1280"
            android:paddingLeft="30dp"
            android:gravity="center_vertical"
            android:text="00:00"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/add_one_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_720x1280"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/add_one_hour"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/minus_one_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_720x1280"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/minus_one_hour"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/add_five_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_720x1280"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/add_five_hour"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/minus_five_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_720x1280"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            android:text="@string/minus_five_hour"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="17dp"
        android:background="#fff" />

    <LinearLayout
        android:id="@+id/lyt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_confirm"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/btn_confirm_width"
            android:layout_height="@dimen/btn_confirm_height"
            android:layout_marginTop="4dp"
            android:src="@mipmap/btn_confirm"
            android:gravity="center_vertical" />
    </LinearLayout>
</LinearLayout>